search category with pagination, refactor service implementation class